# pycasx

./: .codeclimate.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  REUSE.toml  prek.toml  pyproject.toml
.github/: dependabot.yml  labeler.yml  zizmor.yml
.github/workflows/: flake8.yml  labeler.yml  mypy.yml  prek.yaml  publish.yml  pylint.yml  pytest.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/guide/: api.rst  autoavoid.rst  install.rst  quick_start.rst
pycasx/scenario/: fgfs_config.py  scenario.py
src/pycasx/: __init__.py
src/pycasx/acas/: __init__.py  acasx.py  hcas.py  runner.py  vcas.py
src/pycasx/cli/: __init__.py  acasx.py  cli.py  convert_to_onnx.py  copy_files.py  launch.py  run.py  scenarios.py
src/pycasx/cli/utils/: __init__.py  find_fgfs.py
src/pycasx/conf/: __init__.py  launch.yaml
src/pycasx/connectors/: __init__.py  adsb.py  protocols.py
src/pycasx/scenario/: __init__.py  ai_scenario.py  calculate_cpa.py  fgfs_config.py  flightplan.py  scenario.py  waypoint_generation.py
src/pycasx/tools/: __init__.py  nn_convert.py  nn_load.py
src/pycasx/tools/NNet/: nnet.py
src/pycasx/tools/NNet/converters/: nnet_to_onnx.py  onnx_to_nnet.py
src/pycasx/tools/NNet/utils/: normalize_nnet.py  read_nnet.py  write_nnet.py
tests/: test_cas.py  test_cli.py  test_nnet.py  test_scenario_generation.py
