# SPDX-FileCopyrightText: 2024 German Aerospace Center (DLR) <https://dlr.de>
#
# SPDX-License-Identifier: MIT

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.0,<1.0.0"]

[dependency-groups]
ci = [
  "flake8-docstrings-complete",
  "flake8-docstrings",
  "flake8-pyproject",
  "flake8",
  "parameterized",
  "pylint-per-file-ignores",
  "pylint"
]
dev = [
  "lxml-stubs",
  "types-requests",
  "prek>=0.3.5",
  "reuse>=6.2.0",
  "ruff>=0.15.5",
  "ty>=0.0.21",
  "uv>=0.10.9"
]
docs = [
  "sphinx>=8.0.0",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
  "sphinx-autoapi",
  "astroid<4"
]
tests = ["coverage", "pytest-cov", "pytest>=9.0.0", "shapely"]

[project]
authors = [{name = "Johann Christensen", email = "johann.christensen@dlr.de"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Games/Entertainment :: Simulation",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
dependencies = [
  "fastapi[all]>=0.136.1",
  "flightgear-python>=2.0.3",
  "hydra-core>=1.3.2",
  "libtmux>=0.56.0",
  "loguru>=0.7.3",
  "lxml>=6.1.0",
  "numpy>=2.4.4",
  "onnx>=1.21.0",
  "onnx2torch>=1.5.15",
  "onnxruntime>=1.26.0",
  "pillow>=12.2.0",
  "pint>=0.25.3",
  "pyproj>=3.7.2",
  "rich>=15.0.0",
  "scipy>=1.17.1",
  "torch>=2.11.0",
  "tqdm>=4.67.3"
]
description = "A Python implementation of ACAS XA and ACAS XU for Flightgear."
license = "MIT"
license-files = ["LICENSES/*"]
name = "pycasx"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "1.0.1"

[project.scripts]
pycasx = "pycasx.cli.cli:main"

[project.urls]
Documentation = "https://pycasx.readthedocs.io/"
Homepage = "https://github.com/DLR-KI/pycasx.git"
Source = "https://github.com/DLR-KI/pycasx.git"
Tracker = "https://github.com/DLR-KI/pycasx/-/issues"

[tool.codespell]
ignore-words-list = "astroid"

[tool.flake8]
check-return-types = true
extend-ignore = ["DCO010", "DCO060"]
max-complexity = "10"
max-line-length = "88"
per-file-ignores = [
  "src/pycasx/tools/NNet/**/*.py: DCO, DOC",
  "src/pycasx/tools/NNet/nnet.py: DCO, DOC"
]
select = "DCO, DOC"
style = "google"

[tool.licensecheck]
ignore_packages = ["nvidia-*", "ujson"]
using = "PEP631"
zero = true

[tool.pylint.MASTER]
extension-pkg-whitelist = ["lxml"]
load-plugins = ["pylint_per_file_ignores"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = "88"

[tool.pylint.SIMILARITIES]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = 10

[tool.pylint-per-file-ignores]
# docs/conf.py: Ignore constant name not UPPER_CASE (C0103) and redefining built-in (W0622) for copyright notice
# pycasx/cli/cli.py: Ignore importing outside of top level (E1120) and redefining from outer scope (W0621) for speed-up; Ignore no value for cfg (C0415) as it is a Hydra feature
# pycasx/tools/NNet/**/*.py: Ignore missing docstrings for classes from other sources
# pycasx/tools/NNet/nnet.py: Ignore camel case names for classes from other sources
"docs/conf.py" = "C0103,W0622"
"pycasx/cli/cli.py" = "E1120,W0621,C0415"
"pycasx/tools/NNet/" = "C0116"
"pycasx/tools/NNet/nnet.py" = "C0103"

[tool.pytest.ini_options]
addopts = "--cov=src/pycasx/ --cov-report=term-missing --cov-report=xml:coverage.xml --junitxml=report.xml"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
extend-fixable = ["ALL"]
extend-select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "D",
  "DOC",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FAST",
  "FLY",
  "FURB",
  "I",
  "INP",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PERF",
  "PIE",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  # "T20",
  "TC",
  "UP",
  "W"
]
# E203: incorrectly triggers on array slices: <https://github.com/PyCQA/pycodestyle/issues/373>
# SIM300: Yoda conditions might be more reliable but not more readable
# D105: Docstrings in standard magic methods are superfluous
# D107: Google docstring style prevents docstrings in __init__ function
# S311: We don't need perfect cryptography in this project
# ANN401: Allow Any types
# S404, S603: Allow use of subprocess module without additional security measures
# RUF067: Allow code other than docstrings and re-exports in __init__.py files
ignore = [
  "ANN401",
  "D105",
  "D107",
  "E203",
  "RUF067",
  "S311",
  "S404",
  "S603",
  "SIM300"
]
preview = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]
"src/pycasx/cli/cli.py" = ["PLC0415"]
"src/pycasx/tools/NNet/**/*.py" = ["ALL"]
"src/pycasx/tools/NNet/nnet.py" = ["ALL"]
"tests/*" = [
  "ANN",
  "ANN201",
  "ANN205",
  "D",
  "DOC",
  "E501",
  "NPY002",
  "PLC0415",
  "PLC2701",
  "PLR",
  "PLR0904",
  "PLR2004",
  "PT",
  "RUF069",
  "S101",
  "S307",
  "SLF001",
  "W505"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
default-groups = "all"
